Final/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlservice
  template:
    metadata:
      labels:
        app: mlservice
    spec:
      containers:
      - name: mlservice
        image: mlservice:latest
        ports:
        - containerPort: 8000
        startupProbe:
          httpGet:
            path: /docs
            port: 8000
          periodSeconds: 5
          failureThreshold: 12
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          periodSeconds: 30
