Final/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlservice
spec:
  rules:
  - host: mlservice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlservice
            port:
              number: 80
